force-app/main/default/objects/Telegenta_Call_History__b/Telegenta_Call_History__b.object-meta.xml
<CustomObject>
    <label>Telegenta Call History</label>
    <pluralLabel>Telegenta Call Histories</pluralLabel>
</CustomObject>