force-app/main/default/objects/Telegenta_Call_History__b/fields/ActiveDurationMore300__c.field-meta.xml
<CustomField>
    <fullName>ActiveDurationMore300__c</fullName>
    <label>ActiveDurationMore300</label>
    <length>15</length>
    <type>Text</type>
</CustomField>