force-app/main/default/objects/Telegenta_Call_History__b/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Telegenta_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>