force-app/main/default/objects/Telegenta_Call_History__b/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>