force-app/main/default/objects/Telegenta_Call_History__b/fields/Follow_up_Complete__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Complete__c</fullName>
    <label>Follow-up Complete</label>
    <length>15</length>
    <type>Text</type>
</CustomField>