force-app/main/default/objects/Telegenta_Call_History__b/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>Record ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>