force-app/main/default/objects/Telegenta_Call_History__b/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <label>Deleted</label>
    <length>15</length>
    <type>Text</type>
</CustomField>