force-app/main/default/objects/Telegenta_Call_History__b/fields/Market_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit__c</fullName>
    <label>Market Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>