force-app/main/default/objects/Telegenta_Call_History__b/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Telegenta Call History Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>