force-app/main/default/objects/Telegenta_Call_History__b/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Telegenta_Call_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>