force-app/main/default/objects/Telegenta_Call_History__b/fields/Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Phone_Formatted__c</fullName>
    <label>Phone Formatted</label>
    <length>25</length>
    <type>Text</type>
</CustomField>