force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Account__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Telegenta Call Histories</relationshipLabel>
    <relationshipName>Telegenta_Call_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>