force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Active_Duration__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Active_Duration__c</fullName>
    <label>Active Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>