force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Call_Campaign_State__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Call_Campaign_State__c</fullName>
    <label>Call Campaign State</label>
    <referenceTo>telegenta__Call_Campaign_State__c</referenceTo>
    <relationshipLabel>Telegenta Call Histories</relationshipLabel>
    <relationshipName>Telegenta_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>