force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Call_End_Time__c</fullName>
    <label>Call End Time</label>
    <type>DateTime</type>
</CustomField>