force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Caller_Number__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Caller_Number__c</fullName>
    <label>Caller Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>