force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Contact__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Telegenta Call Histories</relationshipLabel>
    <relationshipName>Telegenta_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>