force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Destination_Country__c</fullName>
    <label>Destination Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>