force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Destination_number__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Destination_number__c</fullName>
    <label>Destination number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>