force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Dialer_Session__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Dialer_Session__c</fullName>
    <label>Dialer Session</label>
    <referenceTo>telegenta__Dialer_Session__c</referenceTo>
    <relationshipLabel>Telegenta Call Histories</relationshipLabel>
    <relationshipName>Telegenta_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>