force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Direction__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Direction__c</fullName>
    <label>Direction</label>
    <length>30</length>
    <type>Text</type>
</CustomField>