force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Disposition__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Disposition__c</fullName>
    <label>Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>