force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Duration_In_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Duration_In_Milliseconds__c</fullName>
    <label>Duration In Milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>