force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Incoming_Number__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Incoming_Number__c</fullName>
    <label>Incoming Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>