force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Info_State__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Info_State__c</fullName>
    <label>Info State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>