force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Lead__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Telegenta Call Histories</relationshipLabel>
    <relationshipName>Telegenta_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>