force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Telegenta Call Histories</relationshipLabel>
    <relationshipName>Telegenta_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>