force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Privacy__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Privacy__c</fullName>
    <label>Privacy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>