force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Puuid__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Puuid__c</fullName>
    <label>Puuid</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>