force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Recording_Delete_Date__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Recording_Delete_Date__c</fullName>
    <label>Recording Delete Date</label>
    <type>DateTime</type>
</CustomField>