force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Total_Cost__c</fullName>
    <label>Total Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>