force-app/main/default/objects/Telegenta_Call_History__b/fields/telegenta_Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>telegenta_Total_Duration__c</fullName>
    <label>Total Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>